--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -15,22 +15,18 @@
         "clock"
     ],
     "modules-right": [
+        "custom/anki",
         "mpd",
         "idle_inhibitor",
         "pulseaudio",
         "network",
         "power-profiles-daemon",
         "backlight",
-        "battery",
-  ],
-   "keyboard-state": {
-        "numlock": true,
-        "capslock": true,
-        "format": "{name} {icon}",
-        "format-icons": {
-            "locked": "",
-            "unlocked": ""
-        }
+        "battery"
+    ],
+    "custom/anki":{
+        "exec": "$HOME/.config/waybar/script/anki.sh",
+        "format":"󱍁:{text}"
     },
     "niri/workspaces": {
       "format": "{icon}"
@@ -79,55 +75,26 @@
             "deactivated": ""
         }
     },
-    "tray": {
-        // "icon-size": 21,
-        "spacing": 10
-    },
     "clock": {
-        // "timezone": "America/New_York",
+        "timezone": "Europe/Paris",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
         "format-alt": "{:%Y-%m-%d}"
     },
-    "cpu": {
-        "format": "{usage}% ",
-        "tooltip": false
-    },
-    "memory": {
-        "format": "{}% "
-    },
-
-    "temperature": {
-        // "thermal-zone": 2,
-        // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
-        "critical-threshold": 80,
-        // "format-critical": "{temperatureC}°C {icon}",
-        "format": "{temperatureC}°C {icon}",
-        "format-icons": ["", "", ""]
-    },
     "backlight": {
-        // "device": "acpi_video1",
         "format": "{percent}% {icon}",
         "format-icons": ["", "", "", "", "", "", "", "", ""]
     },
     "battery": {
-        "states": {
-            // "good": 95,
-            "warning": 30,
-            "critical": 15
-        },
+        "states": {"good": 80, "warning": 30, "critical": 15},
         "format": "{capacity}% {icon}",
         "format-full": "{capacity}% {icon}",
         "format-charging": "{capacity}% ",
         "format-plugged": "{capacity}% ",
-	"format-time":"{H}h{m}",
+      	"format-time":"{H}h{m}",
         "format-alt": "{time} {icon}",
-        // "format-good": "", // An empty format will hide the module
-        // "format-full": "",
+        "format-good": "", // An empty format will hide the module
         "format-icons": ["", "", "", "", ""],
-	"expand":true
-    },
-    "battery#bat2": {
-        "bat": "BAT2"
+	      "expand":true
     },
     "power-profiles-daemon": {
       "format": "{icon}",
