--- a/dot_config/qt6ct/qt6ct.conf
+++ b/dot_config/qt6ct/qt6ct.conf
@@ -1,5 +1,5 @@
 [Appearance]
-color_scheme_path=/home/nestor/.config/qt6ct/colors/rose_jaune.conf
+color_scheme_path=/home/nestor/.config/qt6ct/colors/rose_clair.conf
 custom_palette=true
 standard_dialogs=default
 style=Breeze
@@ -24,10 +24,10 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [PaletteEditor]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x2v\0\0\x2\x10\0\0\0\0\0\0\0\0\0\0\x2v\0\0\x2\x10\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\x2v\0\0\x2\x10)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x5\0\0\0\0\0\0\0\av\0\0\x2\x10\0\0\x5\0\0\0\0\0\0\0\av\0\0\x2\x10\0\0\0\0\0\0\0\0\a\x80\0\0\x5\0\0\0\0\0\0\0\av\0\0\x2\x10)
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3\x9f\0\0\x3\xf1\0\0\0\0\0\0\0\0\0\0\x3\x9f\0\0\x3\xf1\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\x3\x9f\0\0\x3\xf1)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x5\0\0\0\0\0\0\0\b\xa7\0\0\x3\xf3\0\0\x5\0\0\0\0\0\0\0\b\xa7\0\0\x3\xf3\0\0\0\0\0\0\0\0\a\x80\0\0\x5\0\0\0\0\0\0\0\b\xa7\0\0\x3\xf3)
 
 [Troubleshooting]
 force_raster_widgets=1
