--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -38,7 +38,8 @@
           "(.*)— Mozilla Firefox":"Firefox : $1",
           "(.*)DuckDuckGo(.*)":"DuckDuckGo",
           "(.*)Arch(.*)":"$1{2}",
-          "(.*)vim(.*)":"$2"
+          "(.*)vim(.*)":"$2",
+          "^(.*)[0-9]'+'0-9]'+'(.*) - Kakoune$":"Kak : $0"
         }
 
     },
@@ -92,9 +93,11 @@
         "format-plugged": "{capacity}% ",
       	"format-time":"{H}h{m}",
         "format-alt": "{time} {icon}",
-        "format-good": "", // An empty format will hide the module
         "format-icons": ["", "", "", "", ""],
 	      "expand":true
+    },
+    "battery#bat2": {
+        "bat": "BAT2"
     },
     "power-profiles-daemon": {
       "format": "{icon}",
